# terminal-platform

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  clippy.toml  deny.toml  release-plz.toml
.cargo/: config.toml
.config/: nextest.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/scripts/: install_fzf.py  install_zellij.py
.github/workflows/: ci.yml  release-plz.yml  release-readiness.yml
apps/terminal-demo/: README.md  index.html  package-lock.json  package.json  tsconfig.base.json  tsconfig.host.json  tsconfig.json  tsconfig.renderer-node-test.json  vite.config.ts
crates/terminal-application/: CHANGELOG.md  Cargo.toml
crates/terminal-application/src/: backend_catalog.rs  lib.rs  registry.rs  sessions.rs
crates/terminal-application/src/sessions/: active_session_service.rs  catalog_service.rs  runtime.rs  saved_sessions_service.rs
crates/terminal-backend-api/: CHANGELOG.md  Cargo.toml
crates/terminal-backend-api/src/: capabilities.rs  commands.rs  errors.rs  lib.rs  ports.rs  subscriptions.rs
crates/terminal-backend-native/: CHANGELOG.md  Cargo.toml
crates/terminal-backend-native/src/: application.rs  emulator.rs  engine.rs  lib.rs  runtime.rs  subscriptions.rs  tests.rs  transcript.rs
crates/terminal-backend-tmux/: CHANGELOG.md  Cargo.toml
crates/terminal-backend-tmux/src/: lib.rs
crates/terminal-backend-zellij/: CHANGELOG.md  Cargo.toml
crates/terminal-backend-zellij/src/: lib.rs
crates/terminal-capi/: CHANGELOG.md  Cargo.toml  README.md  cbindgen.toml
crates/terminal-capi/src/: ffi_types.rs  handles.rs  lib.rs
crates/terminal-capi/tests/: external_consumer.rs  header_generation.rs  install_prefix.rs  package_stage.rs  reference_consumer.c
crates/terminal-capi/tests/support/: mod.rs
crates/terminal-daemon/: CHANGELOG.md  Cargo.toml
crates/terminal-daemon-client/: CHANGELOG.md  Cargo.toml
crates/terminal-daemon-client/src/: lib.rs
crates/terminal-daemon/src/: backend_registry.rs  bootstrap.rs  composition.rs  lib.rs  main.rs  service.rs  state.rs  transport.rs
crates/terminal-daemon/src/adapters/: mod.rs  protocol_mapping.rs  state_runtime.rs
crates/terminal-daemon/src/application/: mod.rs  models.rs  request_dispatcher.rs  runtime_port.rs  subscription_service.rs
crates/terminal-domain/: CHANGELOG.md  Cargo.toml
crates/terminal-mux-domain/: CHANGELOG.md  Cargo.toml
crates/terminal-node/: CHANGELOG.md  Cargo.toml
crates/terminal-node-napi/: CHANGELOG.md  Cargo.toml
crates/terminal-node-napi/package/: README.md  index.cjs  index.d.ts  index.mjs  package.json
crates/terminal-node-napi/package/scripts/: build-local-package.mjs  pack-local-package.mjs  stage-package.mjs  verify-package.mjs
crates/terminal-node-napi/src/: lib.rs
crates/terminal-node-napi/tests/: node_smoke.cjs  node_smoke.rs  package_incompatible_smoke.cjs  package_install_smoke.rs  package_resolution_failure.rs  package_restart_smoke.cjs  package_restart_smoke.mjs  package_restart_smoke.rs  package_shutdown_smoke.cjs  package_shutdown_smoke.mjs  package_shutdown_smoke.rs  package_smoke.cjs  package_smoke.mjs  package_smoke.rs  smoke_flow.cjs
crates/terminal-node-napi/tests/support/: mod.rs
crates/terminal-node/bindings/: NodeAttachedSession.ts  NodeBackendCapabilitiesInfo.ts  NodeBindingVersion.ts  NodeCreateSessionRequest.ts  NodeDiscoveredSession.ts  NodeHandshake.ts  NodeHandshakeAssessment.ts  NodeHandshakeInfo.ts  NodeMuxCommand.ts  NodeMuxCommandResult.ts  NodeOverrideLayoutCommand.ts  NodePaneSplit.ts  NodePaneTreeNode.ts  NodeProtocolCompatibility.ts  NodeProtocolCompatibilityStatus.ts  NodeProtocolVersion.ts  NodeRenameTabCommand.ts  NodeRestoredSession.ts  NodeRouteAuthority.ts  NodeSavedSessionCompatibility.ts  NodeSavedSessionCompatibilityStatus.ts  NodeSavedSessionManifest.ts  NodeSavedSessionRecord.ts  NodeSavedSessionSummary.ts  NodeScreenCursor.ts  NodeScreenDelta.ts  NodeScreenLine.ts  NodeScreenLinePatch.ts  NodeScreenPatch.ts  NodeScreenSnapshot.ts  NodeScreenSurface.ts  NodeSendInputCommand.ts  NodeSessionHealthReason.ts  NodeSessionHealthSnapshot.ts  NodeSessionRoute.ts  NodeSessionSummary.ts  NodeSplitPaneCommand.ts  NodeSubscriptionEvent.ts  NodeSubscriptionMeta.ts  NodeSubscriptionSpec.ts  (+2 more)
crates/terminal-node/src/: dto.rs  lib.rs
crates/terminal-persistence/: CHANGELOG.md  Cargo.toml
crates/terminal-persistence/src/: lib.rs
crates/terminal-projection/: CHANGELOG.md  Cargo.toml
crates/terminal-protocol/: CHANGELOG.md  Cargo.toml
crates/terminal-protocol/src/: envelope.rs  errors.rs  handshake.rs  lib.rs  requests.rs  responses.rs  subscriptions.rs  transport.rs
crates/terminal-protocol/tests/: handshake_roundtrip.rs  transport_props.rs
crates/terminal-runtime/: CHANGELOG.md  Cargo.toml
crates/terminal-runtime/src/: lib.rs  registry.rs  sessions.rs
crates/terminal-runtime/src/sessions/: active_session_service.rs  catalog_service.rs  runtime.rs  saved_sessions_service.rs  subscription_service.rs
crates/terminal-testing/: CHANGELOG.md  Cargo.toml
crates/terminal-testing/manual/: README.md  electron.md  native.md  tmux.md  windows-native-zellij.md  zellij.md
crates/terminal-testing/manual/drafts/: README.md  windows-native-zellij-2026-04-21.md
crates/terminal-testing/manual/runs/: README.md  _template.md  electron-2026-04-21.md  unix-tmux-2026-04-21.md  windows-native-zellij-2026-04-22.md
crates/terminal-testing/src/: lib.rs
crates/terminal-testing/tests/: bootstrap_smoke.rs
crates/terminal-transport/: CHANGELOG.md  Cargo.toml
crates/terminal-transport/src/: client.rs  lib.rs  server.rs
crates/xtask/: CHANGELOG.md  Cargo.toml
crates/xtask/src/: main.rs
docs/terminal/: README.md  final-v1-blueprint-rust-terminal-platform.md  (+7 more)
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: protocol_frames.rs  screen_delta.rs  tmux_layout.rs  zellij_surface.rs
sdk/: .gitignore  README.md  package-lock.json  package.json  tsconfig.base.json  vitest.config.ts
(+224 files in other folders)
