[package]
name = "terminal-application"
version = "0.1.0"
edition = "2024"

[dependencies]
terminal-backend-api = { path = "../terminal-backend-api" }
terminal-domain = { path = "../terminal-domain" }
terminal-mux-domain = { path = "../terminal-mux-domain" }
terminal-persistence = { path = "../terminal-persistence" }
terminal-projection = { path = "../terminal-projection" }

[lints]
workspace = true
