[package]
name = "terminal-backend-api"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
terminal-domain = { path = "../terminal-domain" }
terminal-mux-domain = { path = "../terminal-mux-domain" }
terminal-projection = { path = "../terminal-projection" }
tokio = { workspace = true }

[lints]
workspace = true
