[package]
name = "terminal-backend-tmux"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
terminal-backend-api = { path = "../terminal-backend-api" }
terminal-domain = { path = "../terminal-domain" }
terminal-mux-domain = { path = "../terminal-mux-domain" }
terminal-projection = { path = "../terminal-projection" }
uuid = { workspace = true }

[lints]
workspace = true
