[package]
name = "terminal-capi"
version = "0.1.0"
edition = "2024"
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
terminal-node = { path = "../terminal-node" }
terminal-protocol = { path = "../terminal-protocol" }

[dev-dependencies]
cbindgen = "0.29.2"
terminal-daemon = { path = "../terminal-daemon" }
terminal-daemon-client = { path = "../terminal-daemon-client" }
terminal-testing = { path = "../terminal-testing" }

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
