[package]
name = "terminal-capi"
version = "0.1.0"
edition = "2024"
license.workspace = true

[features]
default = ["native-backend", "tmux-backend", "zellij-backend"]
native-backend = ["terminal-node/native-backend", "terminal-daemon/native-backend", "terminal-testing/native-backend"]
tmux-backend = ["terminal-node/tmux-backend", "terminal-daemon/tmux-backend", "terminal-testing/tmux-backend"]
zellij-backend = ["terminal-node/zellij-backend", "terminal-daemon/zellij-backend", "terminal-testing/zellij-backend"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
terminal-node = { path = "../terminal-node" }
terminal-protocol = { path = "../terminal-protocol" }

[dev-dependencies]
cbindgen = "0.29.2"
terminal-daemon = { path = "../terminal-daemon", default-features = false }
terminal-daemon-client = { path = "../terminal-daemon-client" }
terminal-testing = { path = "../terminal-testing", default-features = false }

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
