[package]
name = "terminal-daemon-client"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = { workspace = true }
interprocess = { workspace = true }
terminal-backend-api = { path = "../terminal-backend-api" }
terminal-domain = { path = "../terminal-domain" }
terminal-protocol = { path = "../terminal-protocol" }
terminal-projection = { path = "../terminal-projection" }
tokio-util = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
terminal-daemon = { path = "../terminal-daemon" }
tokio = { workspace = true }
