[package]
name = "terminal-daemon-client"
version = "0.1.0"
edition = "2024"
license.workspace = true

[features]
default = ["native-backend", "tmux-backend", "zellij-backend"]
native-backend = ["terminal-daemon/native-backend"]
tmux-backend = ["terminal-daemon/tmux-backend"]
zellij-backend = ["terminal-daemon/zellij-backend"]

[dependencies]
futures-util = { workspace = true }
interprocess = { workspace = true }
terminal-backend-api = { path = "../terminal-backend-api" }
terminal-domain = { path = "../terminal-domain" }
terminal-protocol = { path = "../terminal-protocol" }
terminal-projection = { path = "../terminal-projection" }
tokio-util = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
rusqlite = { workspace = true }
serde_json = { workspace = true }
terminal-daemon = { path = "../terminal-daemon", default-features = false }
terminal-mux-domain = { path = "../terminal-mux-domain" }
terminal-persistence = { path = "../terminal-persistence" }
tokio = { workspace = true }
