[package]
name = "terminal-daemon-client"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
terminal-backend-api = { path = "../terminal-backend-api" }
terminal-domain = { path = "../terminal-domain" }
terminal-protocol = { path = "../terminal-protocol" }
terminal-projection = { path = "../terminal-projection" }
terminal-transport = { path = "../terminal-transport" }

[lints]
workspace = true

[dev-dependencies]
rusqlite = { workspace = true }
serde_json = { workspace = true }
terminal-daemon = { path = "../terminal-daemon" }
terminal-mux-domain = { path = "../terminal-mux-domain" }
terminal-persistence = { path = "../terminal-persistence" }
tokio = { workspace = true }
