[package]
name = "terminal-daemon"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
futures-util = { workspace = true }
interprocess = { workspace = true }
terminal-application = { path = "../terminal-application" }
terminal-backend-api = { path = "../terminal-backend-api" }
terminal-backend-native = { path = "../terminal-backend-native" }
terminal-backend-tmux = { path = "../terminal-backend-tmux" }
terminal-backend-zellij = { path = "../terminal-backend-zellij" }
terminal-domain = { path = "../terminal-domain" }
terminal-persistence = { path = "../terminal-persistence" }
terminal-protocol = { path = "../terminal-protocol" }
terminal-projection = { path = "../terminal-projection" }
tokio = { workspace = true }
tokio-util = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
terminal-mux-domain = { path = "../terminal-mux-domain" }
