[package]
name = "terminal-daemon"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
terminal-backend-api = { path = "../terminal-backend-api" }
terminal-backend-native = { path = "../terminal-backend-native" }
terminal-backend-tmux = { path = "../terminal-backend-tmux" }
terminal-backend-zellij = { path = "../terminal-backend-zellij" }
terminal-domain = { path = "../terminal-domain" }
terminal-persistence = { path = "../terminal-persistence" }
terminal-protocol = { path = "../terminal-protocol" }
terminal-projection = { path = "../terminal-projection" }
terminal-runtime = { path = "../terminal-runtime" }
terminal-transport = { path = "../terminal-transport" }
tokio = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
terminal-mux-domain = { path = "../terminal-mux-domain" }
