[package]
name = "terminal-daemon"
version = "0.1.0"
edition = "2024"
license.workspace = true

[features]
default = ["native-backend", "tmux-backend", "zellij-backend"]
native-backend = ["dep:terminal-backend-native"]
tmux-backend = ["dep:terminal-backend-tmux"]
zellij-backend = ["dep:terminal-backend-zellij"]

[dependencies]
serde = { workspace = true }
terminal-backend-api = { path = "../terminal-backend-api" }
terminal-backend-native = { path = "../terminal-backend-native", optional = true }
terminal-backend-tmux = { path = "../terminal-backend-tmux", optional = true }
terminal-backend-zellij = { path = "../terminal-backend-zellij", optional = true }
terminal-domain = { path = "../terminal-domain" }
terminal-persistence = { path = "../terminal-persistence" }
terminal-protocol = { path = "../terminal-protocol" }
terminal-projection = { path = "../terminal-projection" }
terminal-runtime = { path = "../terminal-runtime" }
terminal-transport = { path = "../terminal-transport" }
thiserror = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
terminal-mux-domain = { path = "../terminal-mux-domain" }
