[package]
name = "terminal-node-napi"
version = "0.1.0"
edition = "2024"
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = { version = "3.8.5", features = ["async", "serde-json"] }
napi-derive = "3.5.4"
serde = { workspace = true }
serde_json = { workspace = true }
terminal-node = { path = "../terminal-node" }
terminal-protocol = { path = "../terminal-protocol" }

[build-dependencies]
napi-build = "2.3.1"

[dev-dependencies]
terminal-daemon = { path = "../terminal-daemon" }
terminal-daemon-client = { path = "../terminal-daemon-client" }
terminal-testing = { path = "../terminal-testing" }
tokio = { workspace = true }

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
