[package]
name = "terminal-node"
version = "0.1.0"
edition = "2024"
license.workspace = true

[features]
default = ["native-backend", "tmux-backend", "zellij-backend"]
native-backend = ["terminal-daemon/native-backend", "terminal-testing/native-backend"]
tmux-backend = ["terminal-daemon/tmux-backend", "terminal-testing/tmux-backend"]
zellij-backend = ["terminal-daemon/zellij-backend", "terminal-testing/zellij-backend"]

[dependencies]
serde = { workspace = true }
terminal-backend-api = { path = "../terminal-backend-api" }
terminal-daemon-client = { path = "../terminal-daemon-client" }
terminal-domain = { path = "../terminal-domain" }
terminal-mux-domain = { path = "../terminal-mux-domain" }
terminal-projection = { path = "../terminal-projection" }
terminal-protocol = { path = "../terminal-protocol" }
tokio = { workspace = true }
ts-rs = "12.0.1"
uuid = { workspace = true }

[dev-dependencies]
terminal-daemon = { path = "../terminal-daemon", default-features = false }
terminal-testing = { path = "../terminal-testing", default-features = false }

[lints]
workspace = true
