[package]
name = "terminal-persistence"
version = "0.1.0"
edition = "2024"

[dependencies]
directories = { workspace = true }
rusqlite = { workspace = true }
rusqlite_migration = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
terminal-backend-api = { path = "../terminal-backend-api" }
terminal-domain = { path = "../terminal-domain" }
terminal-projection = { path = "../terminal-projection" }
thiserror = { workspace = true }

[lints]
workspace = true
