[package]
name = "terminal-protocol"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
bytes = { workspace = true }
interprocess = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
terminal-backend-api = { path = "../terminal-backend-api" }
terminal-domain = { path = "../terminal-domain" }
terminal-projection = { path = "../terminal-projection" }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
