[package]
name = "terminal-testing"
version = "0.1.0"
edition = "2024"
license.workspace = true

[features]
default = ["native-backend", "tmux-backend", "zellij-backend"]
native-backend = ["terminal-daemon/native-backend", "dep:terminal-backend-native"]
tmux-backend = ["terminal-daemon/tmux-backend", "dep:terminal-backend-tmux"]
zellij-backend = ["terminal-daemon/zellij-backend", "dep:terminal-backend-zellij"]

[dependencies]
portable-pty = { workspace = true }
terminal-application = { path = "../terminal-application" }
terminal-backend-api = { path = "../terminal-backend-api" }
terminal-backend-native = { path = "../terminal-backend-native", optional = true }
terminal-backend-tmux = { path = "../terminal-backend-tmux", optional = true }
terminal-backend-zellij = { path = "../terminal-backend-zellij", optional = true }
terminal-daemon-client = { path = "../terminal-daemon-client" }
terminal-daemon = { path = "../terminal-daemon", default-features = false }
terminal-domain = { path = "../terminal-domain" }
terminal-mux-domain = { path = "../terminal-mux-domain" }
terminal-persistence = { path = "../terminal-persistence" }
terminal-projection = { path = "../terminal-projection" }
terminal-protocol = { path = "../terminal-protocol" }
tokio = { workspace = true }

[lints]
workspace = true
